<resources>
    <string name="app_name">MixNChat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="verify">Verify: </string>
    <string name="permission">Permission needed for gallery</string>
    <string name="sliderHeader1">Create Your Profile</string>
    <string name="sliderHeader2">Start Exploring</string>
    <string name="sliderHeader3">Engaging Conversations</string>
    <string name="sliderHeader4">Privacy and Security</string>
    <string name="sliderHeader5">Make New Friends</string>
    <string name="sliderDescription1">The first step is to create a great profile that introduces yourself! Add your own photos, share your hobbies and interests. So other users can get to know you better and find common points.</string>
    <string name="sliderDescription2">Our app offers random buddies for you. Start chatting with people who are right for you.</string>
    <string name="sliderDescription3">If you can find interesting people, you can start a conversation and make new connections by messaging them. Explore personal chats based on your interests and personal preferences.</string>
    <string name="sliderDescription4">We prioritize your privacy and security. You can only communicate with people you allow. We dont allow offensive behavior in our app, and we encourage everyone to communicate respectfully with our community guidelines.</string>
    <string name="sliderDescription5">Our app gives you the chance to meet new people and make meaningful connections. Start socializing in our app today to add new friends and valuable connections to your life.\n""\n""To get started, please create an account and join an exciting social experience!</string>

    <string name="webID">34440345033-k1377t82pkadkd0g4i4o76jrgt18lqbm.apps.googleusercontent.com</string>
    <string name="username">Username</string>
    <string name="biography">Biography</string>
    <string name="resetPasswordMessage">Reset password link has been sent to your registered Email</string>
    <string name="fillFieldMessage">Fill this field!</string>
    <string name="verifyMailMessage">Please verify your mail address</string>
    <string name="selectPictureMessage">Please select a picture</string>
    <string name="permissionNeedMessage">Permission needed!</string>
    <string name="postDeletedMessage">Post Deleted</string>
    <string name="allFieldsMessage">Please fill all the fields!</string>
    <string name="noUserMessage">No users</string>
    <string name="profilUpdateMessage">Profile update has been done</string>
    <string name="blockMessage">You have been blocked!</string>
    <string name="you">You : </string>
    <string name="write_message_here">Write message here</string>
    <string name="chats">Chats</string>
    <string name="current_password">Current Password</string>
    <string name="update_mail">Update Mail</string>
    <string name="edit_email">Edit Email</string>
    <string name="new_mail">New Mail</string>
    <string name="current_mail">Current Mail</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="save_changes">Save Changes</string>
    <string name="don_t_worry_it_happens_please_enter_the_address_associated_with_your_account">Don’t worry! It happens. Please enter the address associated with your account.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="submit">Submit</string>
    <string name="back_to_login">Back to Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="login">Login</string>
    <string name="please_enter_your_e_mail_address_and_enter_password">Please enter your e-mail address and password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="forget_password">Forget password?</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="speech">Speech</string>
    <string name="photos">Photos</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_profile">Create Profile</string>
    <string name="settings">Settings</string>
    <string name="terms_and_policies">Terms and Policies</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="report_a_problem">Report a problem</string>
    <string name="log_out">Log out</string>
    <string name="account">Account</string>
    <string name="support_amp_about"><![CDATA[Support & About]]></string>
    <string name="actions">Actions</string>
    <string name="the_first_step_is_to_create_a_great_profile_that_introduces_yourself_add_your_own_photos_share_your_hobbies_and_interests_so_other_users_can_get_to_know_you_better_and_find_common_points">The first step is to create a great profile that introduces yourself! Add your own photos, share your hobbies and interests. So other users can get to know you better and find common points.</string>
    <string name="create_your_profile">Create Your Profile</string>
    <string name="search_username">Search Username</string>
    <string name="field_cant_be_empty">Field cannot be empty!</string>
    <string name="email_successfully_updated">E-mail successfully updated!</string>
    <string name="password_successfully_updated">Password successfully updated!</string>

    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
        <item>Non-Binary</item>
    </string-array>

    <string-array name="Country">
        <item>Türkiye</item>
    </string-array>


</resources>