<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.login.forgotpassword.ForgotPasswordFragment">


    <ImageView
        android:id="@+id/iconImage"
        android:layout_width="175dp"
        android:layout_height="202dp"
        android:importantForAccessibility="no"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_worry_it_happens_please_enter_the_address_associated_with_your_account"
        android:textAlignment="center"
        android:fontFamily="@font/inter"
        android:textSize="18sp"
        android:textColor="#888888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconImage" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="@font/inter"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/mailEdittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/mail_edit_text_style"
        android:ems="10"
        android:hint="@string/enter_e_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordText"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FF8A00"
        android:fontFamily="@font/inter"
        android:paddingStart="60dp"
        android:paddingTop="12dp"
        android:paddingEnd="60dp"
        android:paddingBottom="12dp"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailEdittext"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/backToLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/back_to_login"
        android:textSize="18sp"
        android:textColor="#888888"
        android:textStyle="normal"
        android:fontFamily="@font/inter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitButton" />

</androidx.constraintlayout.widget.ConstraintLayout>