<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.settings.SettingsFragment">


    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/settings"
        android:fontFamily="@font/inter"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/goBackImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/account"
        android:fontFamily="@font/inter"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/goBackImage"
        app:layout_constraintTop_toBottomOf="@+id/goBackImage" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter"
        android:text="@string/support_amp_about"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="12dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0D242760"
            android:paddingBottom="12dp">

            <ImageView
                android:id="@+id/editProfileIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/edit_profile_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/editProfileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="6dp"
                android:text="@string/edit_profile"
                android:fontFamily="@font/inter"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/editProfileIcon"
                app:layout_constraintTop_toTopOf="@+id/editProfileIcon" />

            <ImageView
                android:id="@+id/editPasswordIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/edit_password_icon"
                app:layout_constraintStart_toStartOf="@+id/editProfileIcon"
                app:layout_constraintTop_toBottomOf="@+id/editProfileIcon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/editPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/inter"
                android:text="@string/edit_password"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/editProfileText"
                app:layout_constraintTop_toTopOf="@+id/editPasswordIcon" />

            <ImageView
                android:id="@+id/editEmailIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/edit_mail_icon"
                app:layout_constraintStart_toStartOf="@+id/editPasswordIcon"
                app:layout_constraintTop_toBottomOf="@+id/editPasswordIcon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/editEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter"
                android:text="@string/edit_email"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/editPasswordText"
                app:layout_constraintTop_toTopOf="@+id/editEmailIcon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView29">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0D242760"
            android:paddingBottom="12dp">

            <ImageView
                android:id="@+id/helpSupportIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/help_suppport_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/helpSupportText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/inter"
                android:text="@string/help_amp_support"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/helpSupportIcon"
                app:layout_constraintTop_toTopOf="@+id/helpSupportIcon" />

            <ImageView
                android:id="@+id/termsPoliciesIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/terms_policies_icon"
                app:layout_constraintStart_toStartOf="@+id/helpSupportIcon"
                app:layout_constraintTop_toBottomOf="@+id/helpSupportIcon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/termsPoliciesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/inter"
                android:text="@string/terms_and_policies"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/helpSupportText"
                app:layout_constraintTop_toTopOf="@+id/termsPoliciesIcon" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/actions"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/inter"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView32">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="12dp"
            android:background="#0D242760"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/reportProblemIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/report_problem_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/reportProblemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/inter"
                android:text="@string/report_a_problem"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/reportProblemIcon"
                app:layout_constraintTop_toTopOf="@+id/reportProblemIcon" />

            <ImageView
                android:id="@+id/logOutIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/logout_icon"
                app:layout_constraintStart_toStartOf="@+id/reportProblemIcon"
                app:layout_constraintTop_toBottomOf="@+id/reportProblemIcon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/logOutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/log_out"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter"
                app:layout_constraintStart_toStartOf="@+id/reportProblemText"
                app:layout_constraintTop_toTopOf="@+id/logOutIcon" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>